# Labs

./: .gitignore
Course_project_telephone_book/: contactdialog.ui  contactedit.ui  contactshow.ui  mainwindow.ui  telephone book.pro
Course_project_telephone_book/headers/: List.h  contactButton.h  contactdialog.h  contactedit.h  contactinfo.h  contactshow.h  exception.h  fileexception.h  inputexception.h  mainwindow.h
Course_project_telephone_book/resources/: images.qrc
Course_project_telephone_book/sources/: contactButton.cpp  contactdialog.cpp  contactedit.cpp  contactinfo.cpp  contactshow.cpp  main.cpp  mainwindow.cpp
Databases/: Lab1.vsdx  lab2.vsdx  ~$1.Автостоянка.docx  ЛР1.Автостоянка.docx
Databases/Lab1/: Lab1.vsdx
Databases/Lab2/: relational diagram.pgerd  ЛР2.Автостоянка.docx
Databases/Lab3/: ЛР3.Автостоянка.docx
Databases/Lab4/: ЛР4.Автостоянка.docx
Databases/Lab5/: script.sql  ЛР5.Автостоянка.docx
Databases/Lab6/: ЛР6.Автостоянка.docx
Databases/sql modeler/: 1.dmd
Java/Spring lab/: build.gradle
Network_programming/: Lab1.rar
Network_programming/Lab1-2/: Lab1.sln
Network_programming/Lab2/: Lab2.sln
Network_programming/Lab4/: Lab4.sln
Qt/COMPorts/: COMPorts.pro  inputwindow.cpp  inputwindow.h  inputwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  outputwindow.cpp  outputwindow.h  outputwindow.ui  packet.cpp  packet.h  statewindow.cpp  (+2 more)
Scala/: Scala_lab2.docx  Scala_lab3.docx  Scala_lab4.docx  Scala_lab5.docx  textFile.txt
ССПОиРС/Lab4Linux/Lab4/CMakeProject1/: CMakeLists.txt  spolks_mpi_4_group.cpp
(+127 files in other folders)
